# raytracer

./: .gitignore  Animation.h  BoundingBox.cc  BoundingBox.h  Box.cc  Box.h  CMakeLists.txt  Camera.h  CheckeredMaterial.cc  CheckeredMaterial.h  Disc.cc  Disc.h  Group.cc  Group.h  HitRecord.h  LambertianMaterial.cc  LambertianMaterial.h  LambertianTextureMaterial.cc  LambertianTextureMaterial.h  Material.cc  Material.h  MetalMaterial.cc  MetalMaterial.h  Object.cc  Object.h  Parser.cc  Parser.h  PerlinMaterial.cc  PerlinMaterial.h  PerlinNoise.cc  PerlinNoise.h  PinholeCamera.cc  PinholeCamera.h  Plane.cc  Plane.h  Point.h  PolarSphere.cc  PolarSphere.h  Primitive.cc  Primitive.h  (+21 more)
images/: 072713-attenuation.ppm  81sampleAlias.ppm  before_alias.ppm  lowresbunny.ppm  refractionFun.ppm  table.ppm
scenes/: aliastest.scn  combinetest.scn  givenScene.scn  movingRefractions.scn  ply.scn  table.scn  test.scn  textured.scn  world_map.ppm
videos/: 071313.mpg  071413.mpg  071413.scn  072013-anti-alias.mpg  072013.mpg  073113.mpg  movingCamera.mpg  worldTexture.mpg
